--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@mui/styled-engine-sc": "^5.11.0",
+    "firebase": "^9.15.0",
     "moment": "^2.29.4",
     "next": "13.1.1",
     "react": "18.2.0",
