--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@mui/styled-engine-sc": "^5.11.0",
+    "babel-plugin-superjson-next": "^0.4.5",
     "firebase": "^9.15.0",
     "moment": "^2.29.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "superjson": "^1.12.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
